       instead. (Stefan)
- CHG: The log message history isn't limited to 255 chars
       for each entry. (Stefan)
- BUG: After a merge dry-run, the wc URL wasn't shown
       correctly. This bug didn't affect the actual
       merge, only the UI. (Stefan)
- BUG: The right-drag "move/copy in Subversion here" menu
       entries were missing. (Stefan)

Version 1.1.1
- ADD: The path to client certificates and the client
       certificate password can now be saved. (Stefan)
- ADD: New bugtracking property "bugtraq:append". If set to
       "false", then the bug-ID is inserted at the top of
       the log message. If set to "true" or not set at all,
       then the bug-ID is appended to the log message
       like before. (Stefan)
- ADD: The "check for updates" dialog now shows the
       HEAD revision of the repository. (Stefan)
- ADD: Setting bugtraq: and tsvn: properties recursively
       now makes sure that the properties are only set
       on subfolder and skipped for files, i.e. you
       can set those properties on the /trunk folder with
       the "recursive" checkbox activated and all subfolders
       will have the props set too, without having the files
       set those properties too. (Stefan)
- ADD: When an update is finished, a click on an updated
       file shows a context menu with an entry to compare
       the file in the revision as it was before the update
       with the working copy. (Stefan)
- CHG: improved dialog for creating repositories. (Stefan)
- CHG: The "paste log template in english" setting is now
       a project property (tsvn:logfilelistenglish). Set
       this property to "false" if you want that template
       pasted in your local language. (Stefan)
- CHG: When doing a dry-run merge, after the merge is done
       the merge dialog is shown again with the same settings
       as before so the real merge can be done right away. (Stefan)
- BUG: The log message history in the commit dialog could